@@ -19,20 +19,10 @@ dependencies {
 
 testing {
   suites {
-    // using a test suite to ensure that project(":instrumentation:sofa-rpc-5.4:library-autoconfigure")
-    // is not available on test runtime class path, otherwise instrumentation from library-autoconfigure
-    // module would be used instead of the javaagent instrumentation that we want to test
     val testSofaRpc by registering(JvmTestSuite::class) {
       dependencies {
         implementation(project(":instrumentation:sofa-rpc-5.4:testing"))
-        if (otelProps.testLatestDeps) {
-          implementation("com.alipay.sofa:sofa-rpc-all:latest.release")
-        } else {
-          implementation("com.alipay.sofa:sofa-rpc-all:5.4.0")
-        }
-        runtimeOnly("ch.qos.logback:logback-classic:1.2.13")
-        runtimeOnly("ch.qos.logback:logback-core:1.2.13")
-        runtimeOnly("org.slf4j:slf4j-api:1.7.21")
+        implementation("com.alipay.sofa:sofa-rpc-all:${baseVersion("5.4.0").orLatest()}")
       }
     }
   }
@@ -41,8 +31,6 @@ testing {
 tasks.withType<Test>().configureEach {
   systemProperty("testLatestDeps", otelProps.testLatestDeps)
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
-  // to suppress non-fatal errors on jdk17
-  jvmArgs("--add-opens=java.base/java.math=ALL-UNNAMED")
   // required on jdk17
   jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 
